<b>2009-06-23</b>

* Duplicate IATA codes no longer allowed

<b>2009-06-19</b>

* Language selector available for profile, trip display
* Switch UI language to user preference on login
* Bug: Facebook "Sign up" link was broken
* Additional translation for Finnish (fi)

<b>2009-06-16</b>

* Top 10 Airports generation sped up 100x
* Bug: __FLIGHTS__ raw string popping up in English

<b>2009-06-15</b>

* Fixes for Basic editor in non-English languages
* Minor UI tweaks for localization
* Updated Japanese strings

<b>2009-06-12</b>

* Launched French (fr), Russian (ru)

<b>2009-06-08</b>

* Localization implemented
* Launched Finnish (fi), Japanese (ja)
* Started French (fr)
* Most HTML pages changed to PHP
* URL rewriting so ".php" tag not needed
* Database converted to UTF-8
* JS/PHP data input/output UTF-8 proofed (knock knock)

<b>2009-05-18</b>

* Bug: Flights now sorted by time as well as date
* Bug: Facebook app now handles case where user denies app access
* Cleaner logging for FB app

<b>2009-05-14</b>

* Bug: URL parsing for IE broken, now fixed

<b>2009-05-13</b>

* Banner images added, with caching system
* Automatic generation of HTML, phpBB banner code in Settings

<b>2009-05-05</b>

* Bug: Loop flights (same source and dest airport) now work in "Basic" mode
* Test cases for multi, loop flights added

<b>2009-04-23</b>

* Bug: Links from Facebook with "?ref=nf" added to end now work

<b>2009-03-26</b>

* Segments by train, road or sea added (2509953)
* Extra filter option "mode" added
* Added pie chart of travel modes to Analyze
* Unknown airlines and other carriers can now pop up Add New dialog
* KML now implements directory hierarchy and color-codes segments based on mode
* Replaced clunky JS pie chart code with Google Charts API
* Airline search test cases added
* Autocomplete airline test cases added
* Bug: Better handling of blanked airport, airline names
* Bug: Adding airlines with long names now updates select